kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symfony-demo-app
  namespace: main
  labels:
    app.kubernetes.io/name: symfony-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: symfony-demo-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: symfony-demo-app
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:stable-alpine
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
          volumeMounts:
            - mountPath: /app/public/
              name: public
            - mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              name: default-conf
            - mountPath: /tmp
              name: tmp
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
        - name: php
          image: ghcr.io/indyjonesnl/demo-symfony-app:main
          lifecycle:
            postStart:
              exec:
                command: ["sh", "-c", "cp -r /app/public/* /var/html/"]
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 82
            runAsGroup: 82
          volumeMounts:
            - mountPath: /var/html/
              name: public
          ports:
            - containerPort: 9000
              name: fcgi
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 10m
              memory: 125Mi
      volumes:
        - name: tmp
          emptyDir: {}
        - name: public
          emptyDir: {}
        - name: default-conf
          configMap:
            name: symfony-demo-app
