kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony-demo-app
  namespace: main
  labels:
    app.kubernetes.io/name: symfony-demo-app
spec:
  selector:
    app.kubernetes.io/name: symfony-demo-app
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
