kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symfony-demo-app
  namespace: main
  labels:
    app.kubernetes.io/name: symfony-demo-app
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mydomain.org
      secretName: symfony-demo-app-tls
  rules:
    - host: mydomain.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: symfony-demo-app
                port:
                  name: http
